--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "test_frontend",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://68.183.74.14:4005",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,16 +17,21 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^2.2.5",
+    "draft-js": "^0.11.7",
     "formik": "^2.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "install": "^0.13.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
